@@ -3,6 +3,13 @@
 	Backport from mainline:
 	2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
 
+	* gcc.target/powerpc/ppc64-abi-warn-2.c: New test.
+
+2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	Backport from mainline:
+	2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
 	* gcc.target/powerpc/ppc64-abi-warn-1.c: New test.
 
 2014-07-24  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
